--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "python-multipart>=0.0.9",
   "apscheduler>=3.10.4",
   "httpx>=0.27.0",
+  "itsdangerous>=2.1.0",
 ]
 
 [project.scripts]
